--- a/eLawsLanding/src/i18n/locales/en.json
+++ b/eLawsLanding/src/i18n/locales/en.json
@@ -691,6 +691,301 @@
             "passwordChanged": "Password changed successfully."
         }
     },
+    "myDocuments": {
+        "loadingAuth": "Checking your account…",
+        "hero": {
+            "title": "My Documents",
+            "subtitle": "Download, copy, or delete any generated files.",
+            "new": "New document"
+        },
+        "filters": {
+            "search": "Search",
+            "all": "All",
+            "pdf": "PDF",
+            "images": "Images",
+            "docs": "Docs",
+            "refresh": "Refresh",
+            "refreshing": "Refreshing…"
+        },
+        "loadingDocs": "Loading your documents…",
+        "empty": {
+            "title": "No documents yet",
+            "subtitle": "Generate a document or adjust your filters.",
+            "cta": "Generate document"
+        },
+        "when": {
+            "justNow": "just now",
+            "minutesAgo": "{{count}} min ago",
+            "minutesAgo_other": "{{count}} mins ago",
+            "hoursAgo": "{{count}} hr ago",
+            "hoursAgo_other": "{{count}} hrs ago",
+            "daysAgo": "{{count}} day ago",
+            "daysAgo_other": "{{count}} days ago",
+            "date": "{{value}}",
+            "unknown": "unknown"
+        },
+        "actions": {
+            "open": "Open in new tab",
+            "download": "Download",
+            "copy": "Copy link",
+            "delete": "Delete document"
+        },
+        "delete": {
+            "confirm": "Delete \"{{name}}\"?"
+        },
+        "errors": {
+            "load": "Failed to load documents.",
+            "delete": "Unable to delete document.",
+            "clipboard": "Clipboard unavailable."
+        },
+        "success": {
+            "deleted": "Document deleted.",
+            "copied": "Link copied to clipboard.",
+            "download": "Download started."
+        }
+    },
+    "notesPage": {
+        "hero": {
+            "title": "My Notes",
+            "subtitle": "Save, search, and organize every answer from the AI.",
+            "count": "{{count}} notes"
+        },
+        "search": {
+            "placeholder": "Search notes..."
+        },
+        "actions": {
+            "createFromChat": "Create from chat"
+        },
+        "loading": "Loading notes...",
+        "empty": "No notes found.",
+        "note": {
+            "untitled": "Untitled Note",
+            "initialFallback": "N",
+            "topic": "Topic: {{topic}}",
+            "country": "Jurisdiction: {{country}}"
+        },
+        "dialog": {
+            "title": "Delete Note",
+            "description": "Are you sure you want to delete this note? This action cannot be undone.",
+            "cancel": "Cancel",
+            "confirm": "Delete"
+        }
+    },
+    "proceduresPage": {
+        "title": "Police Stop Procedures",
+        "country": "for {{country}}",
+        "empty": "No procedures found.",
+        "unknown": "Unknown",
+        "back": "Ok, got it!"
+    },
+    "savedProcedures": {
+        "title": "Saved Procedures",
+        "filter": "Filter by country code",
+        "empty": "No saved procedures found.",
+        "country": "Country: {{country}}"
+    },
+    "countries": {
+        "US": "United States",
+        "PL": "Poland",
+        "GB": "United Kingdom",
+        "DE": "Germany",
+        "FR": "France",
+        "ES": "Spain",
+        "IT": "Italy",
+        "NL": "Netherlands",
+        "SE": "Sweden",
+        "NO": "Norway",
+        "DK": "Denmark",
+        "IE": "Ireland",
+        "CA": "Canada",
+        "AU": "Australia",
+        "NZ": "New Zealand"
+    },
+    "caseProperties": {
+        "labels": {
+            "case_number": "Case Number",
+            "client_id": "Client ID",
+            "lawyer_id": "Lawyer ID",
+            "court_name": "Court Name",
+            "court_address": "Court Address",
+            "judge": "Judge",
+            "magistrate": "Magistrate",
+            "clerk": "Court Clerk",
+            "opposing_party": "Opposing Party",
+            "opposing_counsel": "Opposing Counsel",
+            "filing_date": "Filing Date",
+            "service_date": "Service Date",
+            "hearing_date": "Hearing Date",
+            "trial_date": "Trial Date",
+            "appeal_hearing_date": "Appeal Hearing Date",
+            "next_deadline": "Next Deadline",
+            "case_type": "Case Type",
+            "case_category": "Case Category",
+            "jurisdiction": "Jurisdiction",
+            "venue": "Venue",
+            "status_detail": "Detailed Status",
+            "priority": "Priority",
+            "assigned_team": "Assigned Team",
+            "lead_lawyer": "Lead Lawyer",
+            "paralegal": "Assigned Paralegal",
+            "contact_email": "Contact Email",
+            "contact_phone": "Contact Phone",
+            "address": "Client Address",
+            "dob": "Date of Birth",
+            "ssn": "Social Security Number",
+            "citizenship": "Citizenship",
+            "occupation": "Occupation",
+            "employer": "Employer",
+            "marital_status": "Marital Status",
+            "dependents": "Dependents",
+            "opposing_contact": "Opposing Contact Info",
+            "evidence_list": "Evidence List",
+            "exhibits": "Exhibits",
+            "witness_list": "Witness List",
+            "expert_witnesses": "Expert Witnesses",
+            "affidavits": "Affidavits",
+            "subpoenas": "Subpoenas",
+            "discovery_status": "Discovery Status",
+            "discovery_deadline": "Discovery Deadline",
+            "documents_filed": "Documents Filed",
+            "motions_filed": "Motions Filed",
+            "orders_issued": "Orders Issued",
+            "court_fees": "Court Fees",
+            "legal_fees": "Legal Fees",
+            "billing_status": "Billing Status",
+            "retainer_amount": "Retainer Amount",
+            "retainer_balance": "Retainer Balance",
+            "hourly_rate": "Hourly Rate",
+            "total_hours": "Total Hours Worked",
+            "settlement_offers": "Settlement Offers",
+            "settlement_status": "Settlement Status",
+            "mediation_date": "Mediation Date",
+            "arbitration_date": "Arbitration Date",
+            "appeal_status": "Appeal Status",
+            "appeal_filing_date": "Appeal Filing Date",
+            "appeal_outcome": "Appeal Outcome",
+            "sentence": "Sentence / Judgment",
+            "probation_terms": "Probation Terms",
+            "bail_amount": "Bail Amount",
+            "bond_status": "Bond Status",
+            "incarceration_status": "Incarceration Status",
+            "parole_eligibility": "Parole Eligibility",
+            "release_date": "Release Date",
+            "compliance_requirements": "Compliance Requirements",
+            "supervision_officer": "Supervision Officer",
+            "risk_level": "Risk Level",
+            "insurance_claims": "Insurance Claims",
+            "damages_claimed": "Damages Claimed",
+            "damages_awarded": "Damages Awarded",
+            "restitution_amount": "Restitution Amount",
+            "liens": "Liens",
+            "assets_seized": "Assets Seized",
+            "case_notes": "Case Notes",
+            "internal_memos": "Internal Memos",
+            "strategy_notes": "Strategy Notes",
+            "related_cases": "Related Cases",
+            "precedent_references": "Precedent References",
+            "citations": "Legal Citations",
+            "conflict_check": "Conflict Check Status",
+            "nda_signed": "NDA Signed",
+            "engagement_letter": "Engagement Letter Signed",
+            "client_intake_date": "Client Intake Date",
+            "client_preferences": "Client Preferences",
+            "language": "Preferred Language",
+            "communication_method": "Preferred Communication Method",
+            "closing_date": "Closing Date",
+            "archived": "Archived",
+            "reviewed_by": "Reviewed By",
+            "last_review_date": "Last Review Date",
+            "follow_up_date": "Follow-up Date",
+            "next_action": "Next Action"
+        }
+    },
+    "subscribePage": {
+        "hero": {
+            "title": "Manage your E-Lawyer Subscription",
+            "subtitle": "Upgrade, downgrade, or undo changes anytime."
+        },
+        "banner": {
+            "downgrade": "You've scheduled a downgrade to {{plan}}. It will take effect {{when}}.",
+            "cancelToFree": "You've scheduled a downgrade to Free. It will take effect {{when}}.",
+            "when": {
+                "endOfCycle": "at the end of your billing cycle",
+                "date": "on {{date}}"
+            },
+            "undo": "Undo"
+        },
+        "plans": {
+            "free": {
+                "name": "Free",
+                "subtitle": "New Account",
+                "tokens": "10,000 tokens / mo",
+                "features": [
+                    "Chat with AI Law Assistant",
+                    "Access to “I Was Stopped by the Police” panic button"
+                ]
+            },
+            "plus": {
+                "name": "Plus",
+                "subtitle": "Client Account",
+                "tokens": "100,000 tokens / mo",
+                "badge": "Best value",
+                "features": [
+                    "Secure document generation",
+                    "Encrypted chat with your lawyer",
+                    "Chat with AI Law Assistant",
+                    "Access to “I Was Stopped by the Police” panic button"
+                ]
+            },
+            "premium": {
+                "name": "Premium",
+                "subtitle": "Client/Lawyer Account",
+                "tokens": "500,000 tokens / mo",
+                "badge": "Recommended",
+                "features": [
+                    "Secure document generation",
+                    "Encrypted chat with clients",
+                    "Case management with assigned clients",
+                    "Chat with AI Law Assistant",
+                    "Access to “I Was Stopped by the Police” panic button"
+                ]
+            }
+        },
+        "cta": {
+            "upgrade": "Upgrade to {{plan}}",
+            "downgrade": "Downgrade to {{plan}}",
+            "current": "You're on {{plan}}",
+            "currentPlan": "You're on this plan",
+            "pending": "Downgrade scheduled",
+            "loading": "Processing..."
+        },
+        "success": {
+            "downgradeScheduled": "Downgrade scheduled. You’ll keep your current benefits until the billing cycle ends.",
+            "subscriptionUpdated": "Subscription updated.",
+            "undo": "Downgrade cancelled. You’ll stay on your current plan."
+        },
+        "errors": {
+            "pendingDowngrade": "You already have a pending downgrade. Undo it before making more changes.",
+            "samePlan": "You’re already on this plan.",
+            "missingClientSecret": "No client secret returned for the Premium upgrade.",
+            "missingPriceId": "Missing Stripe price ID for the selected plan.",
+            "generic": "Something went wrong.",
+            "unexpected": "An unexpected error occurred."
+        },
+        "payment": {
+            "premiumUpgrade": {
+                "planName": "Premium upgrade",
+                "amount": "$10.99 upgrade fee",
+                "helper": "We’ll upgrade you to Premium automatically after the payment succeeds.",
+                "success": "Upgrade paid. We’ll switch you to Premium as soon as Stripe confirms the charge."
+            },
+            "default": {
+                "planName": "{{plan}} plan",
+                "helper": "Complete payment to finish updating your subscription.",
+                "success": "Payment confirmed. Your subscription will update shortly."
+            }
+        }
+    },
     "dashboard": {
         "loading": "Loading your dashboard…",
         "hero": {
