--- a/eLawsLanding/src/i18n/locales/pl.json
+++ b/eLawsLanding/src/i18n/locales/pl.json
@@ -782,24 +782,52 @@
         "title": "Zapisane procedury",
         "filter": "Filtruj według kodu kraju",
         "empty": "Brak zapisanych procedur.",
-        "country": "Kraj: {{country}}"
+        "country": "Kraj: {{country}} ({{code}})"
     },
     "countries": {
-        "US": "Stany Zjednoczone",
-        "PL": "Polska",
-        "GB": "Wielka Brytania",
-        "DE": "Niemcy",
-        "FR": "Francja",
-        "ES": "Hiszpania",
-        "IT": "Włochy",
-        "NL": "Niderlandy",
-        "SE": "Szwecja",
-        "NO": "Norwegia",
-        "DK": "Dania",
-        "IE": "Irlandia",
-        "CA": "Kanada",
+        "AE": "Zjednoczone Emiraty Arabskie",
+        "AR": "Argentyna",
+        "AT": "Austria",
         "AU": "Australia",
-        "NZ": "Nowa Zelandia"
+        "BE": "Belgia",
+        "BR": "Brazylia",
+        "CA": "Kanada",
+        "CH": "Szwajcaria",
+        "CL": "Chile",
+        "CN": "Chiny",
+        "CO": "Kolumbia",
+        "DK": "Dania",
+        "DE": "Niemcy",
+        "EG": "Egipt",
+        "ES": "Hiszpania",
+        "FI": "Finlandia",
+        "FR": "Francja",
+        "GB": "Wielka Brytania",
+        "GR": "Grecja",
+        "IE": "Irlandia",
+        "IL": "Izrael",
+        "IN": "Indie",
+        "IT": "Włochy",
+        "JP": "Japonia",
+        "KR": "Korea Południowa",
+        "MX": "Meksyk",
+        "MY": "Malezja",
+        "NL": "Niderlandy",
+        "NO": "Norwegia",
+        "NZ": "Nowa Zelandia",
+        "PE": "Peru",
+        "PH": "Filipiny",
+        "PL": "Polska",
+        "PT": "Portugalia",
+        "RU": "Rosja",
+        "SA": "Arabia Saudyjska",
+        "SE": "Szwecja",
+        "SG": "Singapur",
+        "TH": "Tajlandia",
+        "TR": "Turcja",
+        "US": "Stany Zjednoczone",
+        "VN": "Wietnam",
+        "ZA": "Republika Południowej Afryki"
     },
     "caseProperties": {
         "labels": {
