--- a/eLawsLanding/src/i18n/locales/en.json
+++ b/eLawsLanding/src/i18n/locales/en.json
@@ -782,24 +782,52 @@
         "title": "Saved Procedures",
         "filter": "Filter by country code",
         "empty": "No saved procedures found.",
-        "country": "Country: {{country}}"
+        "country": "Country: {{country}} ({{code}})"
     },
     "countries": {
-        "US": "United States",
-        "PL": "Poland",
-        "GB": "United Kingdom",
-        "DE": "Germany",
-        "FR": "France",
-        "ES": "Spain",
-        "IT": "Italy",
-        "NL": "Netherlands",
-        "SE": "Sweden",
-        "NO": "Norway",
-        "DK": "Denmark",
-        "IE": "Ireland",
-        "CA": "Canada",
+        "AE": "United Arab Emirates",
+        "AR": "Argentina",
+        "AT": "Austria",
         "AU": "Australia",
-        "NZ": "New Zealand"
+        "BE": "Belgium",
+        "BR": "Brazil",
+        "CA": "Canada",
+        "CH": "Switzerland",
+        "CL": "Chile",
+        "CN": "China",
+        "CO": "Colombia",
+        "DK": "Denmark",
+        "DE": "Germany",
+        "EG": "Egypt",
+        "ES": "Spain",
+        "FI": "Finland",
+        "FR": "France",
+        "GB": "United Kingdom",
+        "GR": "Greece",
+        "IE": "Ireland",
+        "IL": "Israel",
+        "IN": "India",
+        "IT": "Italy",
+        "JP": "Japan",
+        "KR": "South Korea",
+        "MX": "Mexico",
+        "MY": "Malaysia",
+        "NL": "Netherlands",
+        "NO": "Norway",
+        "NZ": "New Zealand",
+        "PE": "Peru",
+        "PH": "Philippines",
+        "PL": "Poland",
+        "PT": "Portugal",
+        "RU": "Russia",
+        "SA": "Saudi Arabia",
+        "SE": "Sweden",
+        "SG": "Singapore",
+        "TH": "Thailand",
+        "TR": "Turkey",
+        "US": "United States",
+        "VN": "Vietnam",
+        "ZA": "South Africa"
     },
     "caseProperties": {
         "labels": {
